# itmo-python-fall-2023

1_cli/artifacts/: nl.md  tail.md  wc.md
1_cli/nl/: README.md  nl.py
1_cli/tail/: README.md  tail.py
1_cli/wc/: README.md  wc.py
2_latex/: Dockerfile  Makefile  README.md  gen_artifacts.py
2_latex/artifacts/: 1.tex  2.tex
2_latex/latex/: Makefile  README.md  commands.py  common.py  dev-requirements.txt  document.py  document_test.py  pyproject.toml  tabular.py
2_latex/latex/src/latex/: commands.py  compile.py  document.py  tabular.py
2_latex/latex/tests/: document_test.py
2_latex/latex_img/: Makefile  pyproject.toml  requirements.txt
2_latex/latex_img/src/latex_img/: figure.py
2_latex/latex_img/tests/: figure_test.py
3_matrix/: gen_artifacts.py  pyproject.toml
3_matrix/artifacts/3.1/: B.txt  matrix*.txt  matrix+.txt
3_matrix/artifacts/3.2/: A.txt  matrix@.txt
3_matrix/src/matrix/: hash.py  matrix.py  np_matrix.py
3_matrix/tests/: test_hash.py  test_matrix.py  test_np_matrix.py
4_parallel/: common.py  fibonacci.py  integrate.py
4_parallel/artifacts/: ProcessPoolExecutor.csv  ThreadPoolExecutor.csv  fibonacci.md  integrate.md
