[project]
name = "latex_img"
version = "0.0.1"
authors = [
  { name="Mikhail Shishatskiy", email="shishqa@duck.com" },
]
description = "A small latex generation library"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "latex @ https://github.com/Shishqa/itmo-python-fall-2023/releases/download/v0.0.1/latex-0.0.1-py3-none-any.whl",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
